// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScreenTime should match snapshot 1`] = `
<div
  className="css-mfy564 css-1cqgl9p css-5uyuv6 css-1ivoip3 css-1k8tu3j css-1yv2jt6"
  layer="1"
  position="relative"
>
  <h4
    className="css-h3zoee css-c1fjig css-1kvvogt css-dw3c54 css-mhk3h4"
    color="mischka"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    position="relative"
  >
    Screen Time 
    <sup
      className="css-mhk3h4"
      color="color"
    >
      BETA
    </sup>
    <div
      className=""
      position="relative"
    >
      <div
        className="css-1yv2jt6 css-1ivoip3 css-1cqgl9p css-1vwvlri"
        position="absolute"
      >
        <span
          backgroundColor="mischka"
          className="css-1xg3sco css-1okiobr css-1pev02g css-1jw2j5g css-fxshz5 css-xm5bud"
          color="outerSpace"
          position="relative"
        >
          <div
            backgroundColor="mischka"
            className="css-1tdptiz css-1ijci28"
            position="absolute"
          />
          <div
            className="css-4ptacf"
            position="relative"
          >
            Screen time is the time viewing sites between your breaks
          </div>
        </span>
      </div>
    </div>
  </h4>
  <svg
    className=""
    height="275px"
    style={
      Object {
        "height": 275,
        "width": 600,
      }
    }
    width="600px"
  >
    <g
      className=""
      transform="rotate(-89, 300, 137.5)"
    >
      <path
        className="css-dw3c54 css-c5mv14"
        d="M 400 137.5 A 100 100 0 0 1 254.78696143925166 226.69518565541688"
        fill="transparent"
        onClick={[Function]}
        stroke="saltBox"
        strokeLinecap="round"
        strokeWidth={16}
      />
      <path
        className="css-dw3c54 css-c5mv14"
        d="M 231.95291274890502 210.77751303532256 A 100 100 0 0 1 243.56355381395008 54.947425588967306"
        fill="transparent"
        onClick={[Function]}
        stroke="saltBox"
        strokeLinecap="round"
        strokeWidth={16}
      />
      <path
        className="css-dw3c54 css-c5mv14"
        d="M 268.50437935300914 42.58937951914527 A 100 100 0 0 1 383.37096071317376 82.27968752567193"
        fill="transparent"
        onClick={[Function]}
        stroke="saltBox"
        strokeLinecap="round"
        strokeWidth={16}
      />
      <path
        className="css-dw3c54 css-c5mv14"
        d="M 395.36209200496467 107.39897994358567 A 100 100 0 0 1 396.1261695938319 109.93626441830011"
        fill="transparent"
        onClick={[Function]}
        stroke="saltBox"
        strokeLinecap="round"
        strokeWidth={16}
      />
    </g>
    <text
      alignmentBaseline="baseline"
      className="css-dw3c54"
      fill="mischka"
      onClick={[Function]}
      textAnchor="start"
      x={403.3319028289867}
      y={76.48755981161841}
    >
      www.bar.com
    </text>
    <text
      alignmentBaseline="hanging"
      className="css-dw3c54"
      fill="mischka"
      onClick={[Function]}
      textAnchor="end"
      x={288.99657269198025}
      y={256.9944542122233}
    >
      foo.com
    </text>
    <text
      alignmentBaseline="baseline"
      className="css-dw3c54"
      fill="mischka"
      onClick={[Function]}
      textAnchor="end"
      x={187.2811990722431}
      y={96.3360361795817}
    >
      web.baz.com
    </text>
    <text
      alignmentBaseline="baseline"
      className="css-dw3c54"
      fill="mischka"
      onClick={[Function]}
      textAnchor="end"
      x={267.4087140979822}
      y={22.01057155196871}
    >
      other
    </text>
  </svg>
  <button
    backgroundColor="outerSpace"
    className="css-h0biv2 css-5uyuv6 css-1k8tu3j css-1okiobr css-yxn9bq css-1pev02g css-7ep5t css-b9abf0 css-1xg3sco css-1dnwvu3 css-1kvvogt"
    color="mischka"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    outlineColor="saltBox"
    position="relative"
  >
    Enable
    <div
      className=""
      position="relative"
    >
      <div
        className="css-1yv2jt6 css-1ivoip3 css-1cqgl9p css-1vwvlri"
        position="absolute"
      >
        <span
          backgroundColor="mischka"
          className="css-1xg3sco css-1okiobr css-1pev02g css-1jw2j5g css-fxshz5 css-xm5bud"
          color="outerSpace"
          position="relative"
        >
          <div
            backgroundColor="mischka"
            className="css-1tdptiz css-1ijci28"
            position="absolute"
          />
          <div
            className="css-4ptacf"
            position="relative"
          >
            <span
              className=""
            >
              Screen time will need to ask for some elevated permissions to track viewing times.
            </span>
          </div>
        </span>
      </div>
    </div>
  </button>
</div>
`;

exports[`ScreenTime should match snapshot with a grouped selected segment 1`] = `
<div
  className="css-mfy564 css-1cqgl9p css-5uyuv6 css-1ivoip3 css-1k8tu3j css-1yv2jt6"
  layer="1"
  position="relative"
>
  <h4
    className="css-h3zoee css-c1fjig css-1kvvogt css-dw3c54 css-mhk3h4"
    color="mischka"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    position="relative"
  >
    Screen Time 
    <sup
      className="css-mhk3h4"
      color="color"
    >
      BETA
    </sup>
    <div
      className=""
      position="relative"
    >
      <div
        className="css-1yv2jt6 css-1ivoip3 css-1cqgl9p css-1vwvlri"
        position="absolute"
      >
        <span
          backgroundColor="mischka"
          className="css-1xg3sco css-1okiobr css-1pev02g css-1jw2j5g css-fxshz5 css-xm5bud"
          color="outerSpace"
          position="relative"
        >
          <div
            backgroundColor="mischka"
            className="css-1tdptiz css-1ijci28"
            position="absolute"
          />
          <div
            className="css-4ptacf"
            position="relative"
          >
            Screen time is the time viewing sites between your breaks
          </div>
        </span>
      </div>
    </div>
  </h4>
  <div
    className=""
  >
    <svg
      className=""
      height="250"
      width="600"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className=""
        d="M19 125.5h566"
        stroke="outerSpace"
        strokeLinecap="round"
        strokeWidth="8"
      />
      <circle
        className=""
        cx="235.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="102.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className=""
        cx="521.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="33.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className=""
        cx="64.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="26.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className=""
        cx="364.5"
        cy="39.5"
        fill="outerSpace"
        fillRule="nonzero"
        r="26.5"
      />
      <circle
        className=""
        cx="456"
        cy="126"
        fill="outerSpace"
        fillRule="nonzero"
        r="15"
      />
      <circle
        className=""
        cx="419"
        cy="126"
        fill="outerSpace"
        fillRule="nonzero"
        r="15"
      />
    </svg>
    <p
      className="css-1d0qo6a css-ou8fjb css-1p3cmt4 css-mhk3h4"
      color="color"
    >
      Explore more, there is not enough data to show you anything yet.
    </p>
  </div>
  <button
    backgroundColor="outerSpace"
    className="css-h0biv2 css-5uyuv6 css-1k8tu3j css-1okiobr css-yxn9bq css-1pev02g css-7ep5t css-b9abf0 css-1xg3sco css-1dnwvu3 css-1kvvogt"
    color="mischka"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    outlineColor="saltBox"
    position="relative"
  >
    Enable
    <div
      className=""
      position="relative"
    >
      <div
        className="css-1yv2jt6 css-1ivoip3 css-1cqgl9p css-1vwvlri"
        position="absolute"
      >
        <span
          backgroundColor="mischka"
          className="css-1xg3sco css-1okiobr css-1pev02g css-1jw2j5g css-fxshz5 css-xm5bud"
          color="outerSpace"
          position="relative"
        >
          <div
            backgroundColor="mischka"
            className="css-1tdptiz css-1ijci28"
            position="absolute"
          />
          <div
            className="css-4ptacf"
            position="relative"
          >
            <span
              className=""
            >
              Screen time will need to ask for some elevated permissions to track viewing times.
            </span>
          </div>
        </span>
      </div>
    </div>
  </button>
  <div
    className="css-1cqgl9p css-5uyuv6 css-16qvk6d css-z86ji4 css-1xnhsiz"
    css={
      Object {
        "height": "60vh",
        "maxHeight": "60vh",
        "maxWidth": "35vw",
        "transition": "all .5s",
        "width": "35vw",
      }
    }
    data-mujo={true}
    isOpen={true}
    onRequestClose={[Function]}
    outlineColor="saltBox"
    overlayClassName="mujo-modal css-1m3lehq"
    shouldCloseOnOverlayClick={true}
  >
    <svg
      className="css-1ouy01g"
      height={20}
      onClick={[Function]}
      position="absolute"
      width={19}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className=""
        d="
        M9.778 6.864
        l5.754-6.1
        a2 2 0 1 1 2.91 2.746
        l-5.914 6.268 5.913 6.269
        a2 2 0 1 1-2.91 2.744
        l-5.753-6.098-5.753 6.098
        a2 2 0 1 1-2.91-2.744
        l5.914-6.269L1.115 3.51
        A2 2 0 1 1 4.025.765l5.753 6.099z
        "
        fill="mischka"
        fillRule="nonzero"
      />
    </svg>
    <div
      className="css-mg5526 css-1ssqu81 css-1klwfzq css-h8iwlx css-10o9fv1"
    >
      <h4
        className="css-1kvvogt css-mhk3h4"
        color="mischka"
      >
        Screen Time for:
      </h4>
    </div>
    <div
      className="css-mfy564 css-1cqgl9p css-5uyuv6"
      overflow="scroll"
    >
      <div
        className="css-1cqgl9p css-1owbun0 css-h8iwlx css-10o9fv1"
      >
        <h2
          className="css-bsai6x css-1okiobr css-1pev02g css-xm5bud css-2zzudi css-fxshz5 css-dw3c54 css-mhk3h4"
          color="white"
          onClick={[Function]}
          overflow="hidden"
          textOverflow="ellipsis"
        >
          foo.com
        </h2>
      </div>
      <div
        className="css-1cqgl9p css-1owbun0 css-h8iwlx css-10o9fv1"
      >
        <h2
          className="css-bsai6x css-1okiobr css-1pev02g css-xm5bud css-2zzudi css-fxshz5 css-dw3c54 css-mhk3h4"
          color="white"
          onClick={[Function]}
          overflow="hidden"
          textOverflow="ellipsis"
        >
          main.bar.com
        </h2>
      </div>
    </div>
  </div>
</div>
`;

exports[`ScreenTime should match snapshot with a selected segment 1`] = `
<div
  className="css-mfy564 css-1cqgl9p css-5uyuv6 css-1ivoip3 css-1k8tu3j css-1yv2jt6"
  layer="1"
  position="relative"
>
  <h4
    className="css-h3zoee css-c1fjig css-1kvvogt css-dw3c54 css-mhk3h4"
    color="mischka"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    position="relative"
  >
    Screen Time 
    <sup
      className="css-mhk3h4"
      color="color"
    >
      BETA
    </sup>
    <div
      className=""
      position="relative"
    >
      <div
        className="css-1yv2jt6 css-1ivoip3 css-1cqgl9p css-1vwvlri"
        position="absolute"
      >
        <span
          backgroundColor="mischka"
          className="css-1xg3sco css-1okiobr css-1pev02g css-1jw2j5g css-fxshz5 css-xm5bud"
          color="outerSpace"
          position="relative"
        >
          <div
            backgroundColor="mischka"
            className="css-1tdptiz css-1ijci28"
            position="absolute"
          />
          <div
            className="css-4ptacf"
            position="relative"
          >
            Screen time is the time viewing sites between your breaks
          </div>
        </span>
      </div>
    </div>
  </h4>
  <div
    className=""
  >
    <svg
      className=""
      height="250"
      width="600"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className=""
        d="M19 125.5h566"
        stroke="outerSpace"
        strokeLinecap="round"
        strokeWidth="8"
      />
      <circle
        className=""
        cx="235.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="102.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className=""
        cx="521.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="33.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className=""
        cx="64.5"
        cy="125.5"
        fill="gravel"
        fillRule="nonzero"
        r="26.5"
        stroke="outerSpace"
        strokeWidth="8"
      />
      <circle
        className=""
        cx="364.5"
        cy="39.5"
        fill="outerSpace"
        fillRule="nonzero"
        r="26.5"
      />
      <circle
        className=""
        cx="456"
        cy="126"
        fill="outerSpace"
        fillRule="nonzero"
        r="15"
      />
      <circle
        className=""
        cx="419"
        cy="126"
        fill="outerSpace"
        fillRule="nonzero"
        r="15"
      />
    </svg>
    <p
      className="css-1d0qo6a css-ou8fjb css-1p3cmt4 css-mhk3h4"
      color="color"
    >
      Explore more, there is not enough data to show you anything yet.
    </p>
  </div>
  <button
    backgroundColor="outerSpace"
    className="css-h0biv2 css-5uyuv6 css-1k8tu3j css-1okiobr css-yxn9bq css-1pev02g css-7ep5t css-b9abf0 css-1xg3sco css-1dnwvu3 css-1kvvogt"
    color="mischka"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    outlineColor="saltBox"
    position="relative"
  >
    Enable
    <div
      className=""
      position="relative"
    >
      <div
        className="css-1yv2jt6 css-1ivoip3 css-1cqgl9p css-1vwvlri"
        position="absolute"
      >
        <span
          backgroundColor="mischka"
          className="css-1xg3sco css-1okiobr css-1pev02g css-1jw2j5g css-fxshz5 css-xm5bud"
          color="outerSpace"
          position="relative"
        >
          <div
            backgroundColor="mischka"
            className="css-1tdptiz css-1ijci28"
            position="absolute"
          />
          <div
            className="css-4ptacf"
            position="relative"
          >
            <span
              className=""
            >
              Screen time will need to ask for some elevated permissions to track viewing times.
            </span>
          </div>
        </span>
      </div>
    </div>
  </button>
  <div
    className="css-1cqgl9p css-5uyuv6 css-16qvk6d css-z86ji4 css-1xnhsiz"
    css={
      Object {
        "height": "60vh",
        "maxHeight": "60vh",
        "maxWidth": "35vw",
        "transition": "all .5s",
        "width": "35vw",
      }
    }
    data-mujo={true}
    isOpen={true}
    onRequestClose={[Function]}
    outlineColor="saltBox"
    overlayClassName="mujo-modal css-1m3lehq"
    shouldCloseOnOverlayClick={true}
  >
    <svg
      className="css-1ouy01g"
      height={20}
      onClick={[Function]}
      position="absolute"
      width={19}
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        className=""
        d="
        M9.778 6.864
        l5.754-6.1
        a2 2 0 1 1 2.91 2.746
        l-5.914 6.268 5.913 6.269
        a2 2 0 1 1-2.91 2.744
        l-5.753-6.098-5.753 6.098
        a2 2 0 1 1-2.91-2.744
        l5.914-6.269L1.115 3.51
        A2 2 0 1 1 4.025.765l5.753 6.099z
        "
        fill="mischka"
        fillRule="nonzero"
      />
    </svg>
    <div
      className="css-mg5526 css-1ssqu81 css-1klwfzq css-h8iwlx css-10o9fv1"
    >
      <h4
        className="css-1kvvogt css-mhk3h4"
        color="mischka"
      >
        Screen Time for:
      </h4>
    </div>
    <div
      className="css-mfy564 css-1cqgl9p css-5uyuv6"
      overflow="scroll"
    >
      <div
        className="css-1cqgl9p css-5uyuv6 css-mfy564 css-h8iwlx css-10o9fv1"
        overflow="scroll"
      >
        <h2
          className="css-c1fjig css-bsai6x css-mhk3h4"
          color="mischka"
        >
          foo.com
        </h2>
        <progress
          className="css-ejnfd2"
          max="100"
          value={67}
        >
          67
          %
        </progress>
        <p
          className="css-h3zoee css-c1fjig css-1ypmooz css-mhk3h4"
          color="color"
        >
          The site 
          foo.com
           was actively viewed for
           
          <span
            className=""
            color="mischka"
          >
            6 seconds
          </span>
           
          since your last break. That is 
          67
          % of your web viewing.
        </p>
        <p
          className="css-h3zoee css-ou8fjb css-1p3cmt4 css-mhk3h4"
          color="color"
        >
          These times are not aways going to represent a 100% view of your viewing habits.
        </p>
      </div>
      <div
        backgroundColor="gravel"
        className="css-mg5526 css-1cqgl9p css-1owbun0 css-h8iwlx css-10o9fv1 css-cmwu1c css-1ssqu81"
      >
        <div
          className="css-mfy564 css-1cqgl9p"
        />
        <div
          className="css-mg5526 css-1cqgl9p"
        >
          <a
            backgroundColor="saltBox"
            className="css-h0biv2 css-5uyuv6 css-1k8tu3j css-1okiobr css-yxn9bq css-1pev02g css-7ep5t css-b9abf0 css-1xg3sco css-1dnwvu3 css-1kvvogt css-xm5bud"
            color="white"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            outlineColor="gravel"
            position="relative"
          >
            Visit site
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
